Fixed button text aligning in tabs section and hover effect inactivated

--- a/src/_boxes.scss
+++ b/src/_boxes.scss
@@ -25,8 +25,6 @@
       display: grid;
       grid-template-columns: 1fr 1fr 1fr 1fr;
       gap: 30px;
-      position: relative;
-
       .box {
         display: flex;
         flex-direction: column;
@@ -148,17 +146,19 @@
 
 @media screen and (max-width: 1450px) {
   .boxes-section {
+    margin-top: -780px;
     background-image: none;
-    min-height: 2380px;
+    height: 2460px;
+
     .container-small {
-      margin-top: 480px;
+      padding-top: 520px;
       h3 {
         text-align: center;
       }
       .boxes {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: 400px 400px;
+        justify-content: center;
         justify-items: center;
-        gap: 30px;
       }
     }
   }
@@ -166,105 +166,58 @@
 
 @media screen and (max-width: 1200px) {
   .boxes-section {
-    min-height: 2680px;
     .container-small {
-      margin-top: 780px;
+      .boxes {
+        .box {
+          img {
+            order: 3;
+            align-self: center;
+            transform: none;
+          }
+          a {
+            order: 4;
+          }
+          p {
+            margin-bottom: 40px;
+          }
+        }
+        .box:hover {
+          background-image: none;
+          background-color: #fff;
+          box-shadow: initial;
+          h4 {
+            color: $header-background-color;
+          }
+          p {
+            color: #606364;
+          }
+          a {
+            color: $primary-green;
+          }
+        }
+      }
     }
   }
 }
 
 @media screen and (max-width: 992px) {
   .boxes-section {
-    min-height: 3080px;
+    margin-top: -870px;
+    height: 2550px;
     .container-small {
-      margin-top: 1180px;
+      padding-top: 610px;
     }
   }
 }
 
 @media screen and (max-width: 768px) {
   .boxes-section {
+    margin-top: -980px;
+    height: 4360px;
     .container-small {
-      margin-top: 1330px;
+      padding-top: 720px;
       .boxes {
-        .box {
-          text-align: center;
-          img {
-            order: 1;
-            align-self: center;
-          }
-          p {
-            margin-bottom: 40px;
-          }
-          a {
-            order: 2;
-          }
-        }
-      }
-      .box:hover {
-        background-image: none;
-        background-color: #fff;
-        box-shadow: none;
-
-        img {
-          transform: initial;
-        }
-        h4 {
-          color: initial;
-        }
-        p {
-          color: initial;
-        }
-        a {
-          color: $primary-green;
-        }
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 727px) {
-  .boxes-section {
-    min-height: 3180px;
-    .container-small {
-      h3 {
-        transform: scale(0.8);
-      }
-
-      .boxes {
-        .box {
-          transform: scale(0.7);
-          h4 {
-            text-wrap: nowrap;
-          }
-        }
-        .box-last {
-          transform: scale(0.7);
-        }
-        .box-last::after {
-          height: 5px;
-        }
-        .box-last::before {
-          width: 5px;
-        }
-      }
-    }
-  }
-}
-
-@media screen and (max-width: 630px) {
-  .boxes-section {
-    min-height: 3080px;
-    .container-small {
-      .boxes {
-        margin-top: -70px;
-
-        .box {
-          transform: scale(0.6);
-        }
-        .box-last {
-          transform: scale(0.6);
-        }
+        grid-template-columns: 1fr;
       }
     }
   }
